# adk-skills

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_EXECUTION.md  CODE_EXECUTION_SPEC.md  CODE_EXECUTION_TASKS.md  README.md  SPEC.md  TASKS.md  kill_port.sh  pyproject.toml  run_chat.sh
docs/: FILE_DOWNLOAD_GUIDE.md  OBSERVABILITY.md
examples/: CHAT_UI.md  basic_agent.py  chat_server.py
examples/static/: chat.html
skills/artifact-publishing/: SKILL.md
skills/data-analysis/: SKILL.md  requirements.txt  test_data.csv
skills/data-analysis/references/: REFERENCE.md
skills/data-analysis/scripts/: extract.py  stats.py  visualize.py
skills/hello-world/: SKILL.md
skills/powerpoint-generator/: SKILL.md  ai_environmental_impact.pptx  ai_environmental_impact_explained.pptx  environmental_impact_ai.pptx  environmental_impact_of_ai.pptx  python_programming.pptx
skills/powerpoint-generator/scripts/: create_presentation.py
src/skill_framework/: __init__.py  artifact_publisher.py  config.py
src/skill_framework/agent/: __init__.py  agent_builder.py  conversation.py
src/skill_framework/core/: __init__.py  context_manager.py  message_injector.py  permission_manager.py  script_executor.py  skill_loader.py  skill_meta_tool.py
tests/integration/: __init__.py  test_adk_code_execution.py  test_adk_integration.py  test_end_to_end.py  test_skill_execution.py
tests/unit/: test_agent_builder.py  test_config.py  test_context_manager.py  test_conversation.py  test_message_injector.py  test_permission_manager.py  test_script_executor.py  test_skill_loader.py  test_skill_meta_tool.py  test_tool_registry.py
(+9 files in other folders)
