[project]
name = "skill-framework"
version = "0.1.0"
description = "Skills meta-tool architecture for Google ADK agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
